--- a/main.html
+++ b/main.html
@@ -3,15 +3,39 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Arrowhead Robotics</title>
+  <title>Arrowhead Robotics Home Page</title>
+  <link rel="stylesheet" href="styles.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
-    <div>
-        <div class="Navbar">
-            <div class = "Icon">
-                <h1 class = "logo">Arrowhead Robotics</h1>
-            </div>
+    <header>
+        <div class="nav-container">
+            <img src="Arrowhead Robotics Logo.jpg" alt="Arrowhead Robotics Logo">
+            <h1>Arrowhead Robotics</h1>
         </div>
-    </div>
+        <ul class="nav-container">
+            <i class="fa-solid fa-house"></i>
+            <li><a  href="main.html">Home</a></li>
+            <i class="fa-solid fa-face-smile"></i>
+            <li><a href="about.html">About</a></li>
+            <i class="fa-solid fa-robot"></i>
+            <li><a href="projects.html">Projects</a></li>
+            <i class="fa-solid fa-address-book"></i>
+            <li><a href="contact.html">Contact</a></li>
+        </ul>
+    </header>
+    <main>
+        <div>
+
+        </div>
+    </main>
+    <footer>
+       <div>
+            <p>&copy; 2025 Arrowhead Robotics. All rights reserved.</p>
+       </div>
+    </footer>
 </body>
 </html>
