--- a/main.html
+++ b/main.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Arrowhead Robotics Home Page</title>
+  <title>Arrowhead Robotics</title>
   <link rel="stylesheet" href="styles.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -13,28 +13,40 @@
 <body>
     <header>
         <div class="nav-container">
-            <img src="Arrowhead Robotics Logo.jpg" alt="Arrowhead Robotics Logo">
+            <button class="image-button">
+                <a href="main.html">
+                    <img src="/Public/Arrowhead Robotics Logo.jpg" alt="Arrowhead Robotics Logo">
+                </a>
+            </button>
             <h1>Arrowhead Robotics</h1>
         </div>
         <ul class="nav-container">
             <i class="fa-solid fa-house"></i>
-            <li><a  href="main.html">Home</a></li>
+            <li class="nav-text"> 
+                <a  href="main.html">Home</a>
+            </li>
             <i class="fa-solid fa-face-smile"></i>
-            <li><a href="about.html">About</a></li>
+            <li class="nav-text">
+                <a href="about.html">About</a>
+            </li>
             <i class="fa-solid fa-robot"></i>
-            <li><a href="projects.html">Projects</a></li>
+            <li class="nav-text"><a href="projects.html">Projects</a>
+            </li>
             <i class="fa-solid fa-address-book"></i>
-            <li><a href="contact.html">Contact</a></li>
+            <li class="nav-text"><a href="contact.html">Contact</a>
+            </li>
         </ul>
     </header>
     <main>
         <div>
-
+            <h2>Welcome to Team 3773!</h2>
+            <p>We are a team of passionate individuals dedicated to advancing robotics technology and education.</p>
+            <p>Explore our projects, learn about our team, and get in touch with us!</p>
         </div>
     </main>
     <footer>
        <div>
-            <p>&copy; 2025 Arrowhead Robotics. All rights reserved.</p>
+        
        </div>
     </footer>
 </body>
