--- a/projects.html
+++ b/projects.html
@@ -1,30 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Arrowhead Robotics Projects</title>
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Arrowhead Robotics Projects</title>
+  <link rel="stylesheet" href="styles.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
     <header>
-        <div class="logo">
-            <img src="Arrowhead Robotics Logo.jpg" alt="Arrowhead Robotics Logo">
+        <div class="nav-container">
+            <button class="image-button">
+                <a href="main.html">
+                    <img src="/Public/Arrowhead Robotics Logo.jpg" alt="Arrowhead Robotics Logo">
+                </a>
+            </button>
+            <h1>Arrowhead Robotics</h1>
         </div>
-        <nav>
-            <ul>
-                <li><a href="main.html">Home</a></li>
-                <li><a href="about.html">About</a></li>
-                <li><a href="projects.html">Projects</a></li>
-                <li><a href="contact.html">Contact</a></li>
-            </ul>
-        </nav>
+        <ul class="nav-container">
+            <i class="fa-solid fa-house"></i>
+            <li class="nav-text"> 
+                <a  href="main.html">Home</a>
+            </li>
+            <i class="fa-solid fa-face-smile"></i>
+            <li class="nav-text">
+                <a href="about.html">About</a>
+            </li>
+            <i class="fa-solid fa-robot"></i>
+            <li class="nav-text"><a href="projects.html">Projects</a>
+            </li>
+            <i class="fa-solid fa-address-book"></i>
+            <li class="nav-text"><a href="contact.html">Contact</a>
+            </li>
+        </ul>
     </header>
     <main>
+        <div>
 
+        </div>
     </main>
     <footer>
-        <p>&copy; 2025 Arrowhead Robotics. All rights reserved.</p>
+       <div>
+        
+       </div>
     </footer>
 </body>
 </html>
